# energy-literacy

./: README.md  pyproject.toml
energy_literacy/: __init__.py  eroei.py
