[tool.poetry]
name = "energy-literacy"
version = "0.1.0"
description = ""
authors = ["Richard Lyon <richlyon@mac.com>"]
readme = "README.md"
packages = [{include = "energy_literacy"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pytest = "^7.1.3"
pandas = "^1.5.0"
numpy = "^1.23.3"
matplotlib = "3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
